# density-clustering

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  THIRD-PARTY-LICENSES.md  requirements.txt
.github/workflows/: ci.yml
cmake/: opticsConfig.cmake.in
docs/: API-STABILITY.md  ROADMAP-0.9.1.md  ROADMAP-0.9.md  ROADMAP-1.0.0-benchmark-matrix.md  ROADMAP-1.0.0-execution.md  ROADMAP-post-0.9.1.md  algorithms.md  benchmark-matrix-runbook.md  benchmarking.md
documentation/: references.md
examples/: CMakeLists.txt
examples/cluster_csv/: README.md  cluster_csv.cpp
examples/color_clustering/: README.md  cluster_image.py  color_study.cpp  compare_kmeans.py  optics_color.cpp
examples/shared/: csv_io.hpp
include/optics/: Stopwatch.hpp  backend.hpp  boost_backend.hpp  hdbscan.hpp  hnsw_backend.hpp  io.hpp  optics.hpp  preprocess.hpp  testdata.hpp  tree.hpp  version.hpp
include/optics/detail/: boruvka_mst.hpp  hadamard.hpp  math.hpp  profile.hpp  random_features.hpp  random_projection.hpp  thread_pool.hpp
perf/: README.md  baseline.csv
python/: .gitignore  CMakeLists.txt  README.md  optics_py.cpp  pyproject.toml  test_optics_py.py
python/optics/: __init__.py  color.py  spaces.py
python/tests/: test_color.py  test_native.py
scripts/: demo.ps1  demo.sh
study/color_clustering/: .gitignore  REPORT.md  make_plots.py  run_study.py  study_lib.py  summarize.py
test/: CMakeLists.txt  test_main.cpp
test/Benchmark/: acq_sweep.cpp  approx_probe.cpp  backend_compare.cpp  bench_config.hpp  benchmark.cpp  csv_points.hpp  dedup_probe.cpp  hdbscan_boruvka_dual_probe.cpp  hdbscan_compare.cpp  hdbscan_fixup_probe.cpp  hdbscan_hnsw_mst_probe.cpp  hdbscan_hnsw_tune_probe.cpp  hdbscan_mst_probe.cpp  hnsw_probe.cpp  mode_compare.cpp  optics_matrix.cpp  perf.cpp  quality_compare.cpp  reuse_probe.cpp  scale.cpp  soptics_compare.cpp  soptics_param_probe.cpp  soptics_proj_probe.cpp  soptics_reuse_probe.cpp
test/ClusterImage_Test/: test_ClusterImages.cpp
test/support/: ppm_fixture.hpp
tools/: README.md  _strip_status.py  analyze_matrix.py  compare_algorithms.py  correctness_gate.py  datasets.py  fetch_datasets.py  gen_dataset.py  hdbscan_benchmark.py  perf_gate.py  quality_benchmark.py  run_dbscan_r.R  run_matrix.py  sk_engine.py  timing_compare.py  timing_images.py  validate_sklearn.py  visualize.py
